--- a/style.css
+++ b/style.css
@@ -8,7 +8,7 @@ body{
     box-shadow: 2px 2px 7px rgba(0, 0, 0, 0.13);;
     background-color: white;
     border-radius: 10px;
-    max-width: 70%;
+    max-width: 90%;
     margin: auto;
     margin-bottom: 30px;
   }
@@ -21,6 +21,8 @@ body{
     border-radius: 8px;
     height: 300px;
     width: 600px;
+    min-height: 100%;
+    max-width: 100%;
   }
   h1{
     padding-top: 50px;
